# flare24

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  config.py  contour_checker.ipynb  dataset.py  etc.ipynb  example.py  match_img.ipynb  pack_png2nii.ipynb  predict.sh  prepare.py  preprocess.py  pyproject.toml  readme.md  setup.py  test_sitk.py  train.py  train.sh  transform.py  translation.py  utils.py
data/: _MR_meta.csv
data/domain_2/: meta
data/domain_3/: meta_3
datasets/nnunet_data/: eda.ipynb
datasets/nnunet_data/nnUNet_preprocessed/Dataset100_SPINE/: dataset_fingerprint.json  nnUNetPlans.json
datasets/nnunet_data/nnUNet_raw/Dataset100_FLARE/: dataset.json
datasets/nnunet_data/nnUNet_raw/Dataset101_FLARE/: dataset.json
datasets/nnunet_data/nnUNet_raw/Dataset500_FLARE/: dataset.json
datasets/nnunet_data/nnUNet_raw/Task100_FLARE/: dataset.json
datasets/nnunet_data/nnUNet_raw/Task500_FLARE/: dataset.json
datasets/nnunet_data/nnUNet_raw/Task501_FLARE/: dataset.json
datasets/nnunet_data/nnUNet_raw_data_base/Dataset100_SPINE/: dataset.json
nnUNet/: pyproject.toml  setup.py
nnUNet/nnunet/dataset_conversion/: generate_task_json.py  utils.py
nnUNet/nnunet/utilities/: task_name_id_conversion.py
nnUNet/nnunetv2/dataset_conversion/: generate_dataset_json.py
nnUNet/nnunetv2/experiment_planning/: verify_dataset_integrity.py
nnUNet/nnunetv2/imageio/: nibabel_reader_writer.py  reader_writer_registry.py
nnUNet/nnunetv2/inference/: predict_from_raw_data.py
utils/: dataset.py
(+7 files in other folders)
